fix: fix wrap

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     background: silver;
     height: 80vh;
     flex-direction: column;
-    width: 1024px;
+    max-width: 1024px;
     margin-top: 100px;
     /* margin: 25px 25%; */
     border-radius: 0px;
